Fixing links and z-index of buttons

--- a/css/style.scss
+++ b/css/style.scss
@@ -300,6 +300,7 @@ nav {
         position: absolute;
         right: 20px;
         top: 20px;
+        z-index: 999999;
     }
 }
 $shadow: 0px 3px 5px rgba(darken($primary, 30%), 0.2);
@@ -582,6 +583,13 @@ $shadow: 0px 3px 5px rgba(darken($primary, 30%), 0.2);
             opacity: 1;
             @include transition(all $anim $bez);
         }
+        a {
+            height: 100%;
+            width: 100%;
+            position: absolute;
+            z-index: 999;
+            display: none;
+        }
         &:hover {
             box-shadow: 0px 3px 10px darken(#fff, 30%);
             h1 {
@@ -591,6 +599,9 @@ $shadow: 0px 3px 5px rgba(darken($primary, 30%), 0.2);
             img {
                 opacity: 0.3;
                 @include transform(scale(1.1));
+            }
+            a {
+                display: block;
             }
         }
     }
